[metadata]
description-file = README.md

[tool:pytest]
addopts = ./tests/ --doctest-modules --mccabe --cov=./Krakatau --cov-append --cov-report html:tests/reports/coverage-html --cov-report xml:tests/reports/coverage.xml --pep8 --ignore=docs/
doctest_encoding = utf-8
mccabe-complexity=10

[pydocstyle]
ignore = D104, D105, D107, D301, D413, D203, D212, D100
match_dir = Krakatau
